--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section id="homePage" class="page active-page space-y-3">
             <div class="flex overflow-x-auto gap-2 pb-2 no-scrollbar" id="eventFilters"></div>
             <div id="announcementList" class="space-y-6 pb-4">
-                <div class="text-center text-gray-400 py-10">News & Events များ ဆွဲယူနေပါသည်...</div>
+                <div class="text-center text-gray-400 py-10 font-bold">News & Events များ ဆွဲယူနေပါသည်...</div>
             </div>
         </section>
 
@@ -59,7 +59,7 @@
                 <div class="flex overflow-x-auto gap-2 pb-1 no-scrollbar" id="dirFilters"></div>
             </div>
             <div id="directoryList" class="space-y-6 mt-2 pb-4">
-                <div class="text-center text-gray-400 py-10">လုပ်ငန်းလိပ်စာများ ဆွဲယူနေပါသည်...</div>
+                <div class="text-center text-gray-400 py-10 font-bold">လုပ်ငန်းလိပ်စာများ ဆွဲယူနေပါသည်...</div>
             </div>
         </section>
 
@@ -69,9 +69,10 @@
                 <p class="text-xs text-gray-600 mb-3">မိမိတို့ လုပ်ငန်းကို Cherry Directory တွင် ထည့်သွင်းလိုပါက Form ဖြည့်စွက်ပေးပါ။</p>
                 <a id="regBtn" target="_blank" class="inline-block gold-gradient text-white text-xs font-bold px-4 py-2 rounded-lg shadow cursor-pointer">စာရင်းသွင်းရန်</a>
             </div>
-            <div id="contactInfo" class="space-y-4">
-                <div class="text-center text-gray-400 py-10">Admin အချက်အလက်များ ဆွဲယူနေပါသည်...</div>
-            </div>
+
+            <div id="adminProfileArea"></div>
+
+            <div id="adminNotesArea" class="space-y-3"></div>
         </section>
 
         <section id="detailPage" class="fixed inset-0 bg-[#f8f5ff] z-[100] overflow-y-auto hidden">
@@ -95,8 +96,8 @@
         const GID_DIR = '1267218282';
         const GID_CONTACT = '626044868';
 
-        const REVIEW_URL = "https://docs.google.com/forms/d/e/1FAIpQLSce4TGjXal4s0wmeNyGBdO3cg8ymNgXlilu1o_8R3-Q9LMYyw/viewform?usp=dialog";
         const REG_URL = "https://docs.google.com/forms/d/e/1FAIpQLSdFGRd57WIpOOJDnZI4U9vrtZAsJCW6pRiP1WvQDrXZeRy5xA/viewform?usp=dialog";
+        const REVIEW_URL = "https://docs.google.com/forms/d/e/1FAIpQLSce4TGjXal4s0wmeNyGBdO3cg8ymNgXlilu1o_8R3-Q9LMYyw/viewform?usp=dialog";
         document.getElementById('regBtn').href = REG_URL;
 
         const BASE_URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json`;
@@ -135,11 +136,7 @@
                 const res = await fetch(`${BASE_URL}&gid=${GID_HOME}`);
                 const text = await res.text();
                 const json = JSON.parse(text.substr(47).slice(0, -2));
-                eventsData = json.table.rows.map(r => ({
-                    cat: r.c[0]?.v, title: r.c[1]?.v, desc: r.c[2]?.v, fromDate: r.c[3]?.v, toDate: r.c[4]?.v, 
-                    time: r.c[5]?.v, place: r.c[6]?.v, org: r.c[7]?.v, logo: r.c[8]?.v, 
-                    images: [r.c[9]?.v, r.c[10]?.v, r.c[11]?.v, r.c[12]?.v, r.c[13]?.v].filter(Boolean)
-                })).filter(i => i.title && i.title !== "Title");
+                eventsData = json.table.rows.map(r => ({ cat: r.c[0]?.v, title: r.c[1]?.v, desc: r.c[2]?.v, fromDate: r.c[3]?.v, toDate: r.c[4]?.v, time: r.c[5]?.v, place: r.c[6]?.v, org: r.c[7]?.v, logo: r.c[8]?.v, images: [r.c[9]?.v, r.c[10]?.v, r.c[11]?.v, r.c[12]?.v, r.c[13]?.v].filter(Boolean) })).filter(i => i.title && i.title !== "Title");
                 setupFilters('eventFilters', eventsData, (c) => { activeEventCat = c; renderEvents(); });
                 renderEvents();
             } catch (e) { document.getElementById('announcementList').innerHTML = '<p class="text-center text-red-400">Events Load Error</p>'; }
@@ -150,12 +147,7 @@
                 const res = await fetch(`${BASE_URL}&gid=${GID_DIR}`);
                 const text = await res.text();
                 const json = JSON.parse(text.substr(47).slice(0, -2));
-                dirData = json.table.rows.map(r => ({
-                    name: r.c[0]?.v, cat: r.c[1]?.v, type: r.c[2]?.v, desc: r.c[3]?.v, addr: r.c[4]?.v, 
-                    ward: r.c[5]?.v, city: r.c[6]?.v, ph1: r.c[7]?.v, ph2: r.c[8]?.v, ph3: r.c[9]?.v, 
-                    viber: r.c[10]?.v, telegram: r.c[11]?.v, email: r.c[12]?.v, img: r.c[13]?.v, 
-                    rating: r.c[14]?.v, note: r.c[15]?.v
-                })).filter(i => i.name && i.name !== "Name");
+                dirData = json.table.rows.map(r => ({ name: r.c[0]?.v, cat: r.c[1]?.v, type: r.c[2]?.v, desc: r.c[3]?.v, addr: r.c[4]?.v, ward: r.c[5]?.v, city: r.c[6]?.v, ph1: r.c[7]?.v, ph2: r.c[8]?.v, ph3: r.c[9]?.v, viber: r.c[10]?.v, telegram: r.c[11]?.v, email: r.c[12]?.v, img: r.c[13]?.v, rating: r.c[14]?.v, note: r.c[15]?.v })).filter(i => i.name && i.name !== "Name");
                 setupFilters('dirFilters', dirData, (c) => { activeDirCat = c; handleSearch(); });
                 renderDirectory();
             } catch (e) { document.getElementById('directoryList').innerHTML = '<p class="text-center text-red-400">Directory Load Error</p>'; }
@@ -166,20 +158,39 @@
                 const res = await fetch(`${BASE_URL}&gid=${GID_CONTACT}`);
                 const text = await res.text();
                 const json = JSON.parse(text.substr(47).slice(0, -2));
-                const adminRows = json.table.rows.filter(r => r.c[0]?.v && r.c[0]?.v !== "Description");
-                document.getElementById('contactInfo').innerHTML = adminRows.map(r => `
-                    <div class="bg-white p-6 rounded-2xl shadow-sm border-t-4 border-[#4B0082]">
-                        <h3 class="font-bold text-lg text-[#4B0082] text-center mb-4 border-b pb-2">Admin Profile</h3>
-                        ${r.c[6]?.v ? `<div class="mb-5 bg-yellow-400 border-l-8 border-[#B8860B] p-4 text-[#37006a] font-bold shadow-lg text-lg leading-relaxed"><i class="fa fa-bullhorn mr-2 animate-bounce"></i>${r.c[6].v}</div>` : ''}
-                        <div class="space-y-4">
-                            <div class="flex justify-between items-start border-b border-gray-50 pb-2"><span class="text-[10px] text-gray-400">DESCRIPTION</span><span class="text-xs font-bold text-[#4B0082] text-right ml-4">${r.c[0]?.v || '-'}</span></div>
-                            ${renderAdminBtn('Phone 1', r.c[1]?.v, 'tel:', 'fa-phone-alt', 'bg-green-500')}
-                            ${renderAdminBtn('Phone 2', r.c[2]?.v, 'tel:', 'fa-phone-alt', 'bg-green-500')}
-                            ${renderAdminBtn('Viber Chat', r.c[3]?.v, 'viber://chat?number=', 'fa-viber', 'viber-bg', true)}
-                            ${renderAdminBtn('Telegram Chat', r.c[4]?.v, 'https://t.me/', 'fa-telegram', 'telegram-bg', false, true)}
-                            ${renderAdminBtn('Email Admin', r.c[5]?.v, 'mailto:', 'fa-envelope', 'bg-red-500')}
+                const allRows = json.table.rows;
+
+                // 1. Handle Profile Card (Only for Rows with Columns A-F data)
+                const profileRow = allRows.find(r => r.c[0]?.v && r.c[0].v !== "Description");
+                if (profileRow) {
+                    document.getElementById('adminProfileArea').innerHTML = `
+                    <div class="bg-white p-6 rounded-2xl shadow-sm border-t-4 border-[#4B0082] mb-6">
+                        <div class="mb-4 text-center border-b pb-4">
+                            <i class="fa fa-user-shield text-3xl text-[#4B0082] mb-2"></i>
+                            <h3 class="font-bold text-lg text-[#4B0082]">Admin Profile</h3>
                         </div>
-                    </div>`).join('');
+                        <div class="space-y-4">
+                            <div class="flex justify-between items-start border-b border-gray-50 pb-2"><span class="text-[10px] text-gray-400">DESCRIPTION</span><span class="text-xs font-bold text-[#4B0082] text-right ml-4">${profileRow.c[0]?.v || '-'}</span></div>
+                            ${renderAdminBtn('Phone 1', profileRow.c[1]?.v, 'tel:', 'fa-phone-alt', 'bg-green-500')}
+                            ${renderAdminBtn('Phone 2', profileRow.c[2]?.v, 'tel:', 'fa-phone-alt', 'bg-green-500')}
+                            ${renderAdminBtn('Viber Chat', profileRow.c[3]?.v, 'viber://chat?number=', 'fa-viber', 'viber-bg', true)}
+                            ${renderAdminBtn('Telegram Chat', profileRow.c[4]?.v, 'https://t.me/', 'fa-telegram', 'telegram-bg', false, true)}
+                            ${renderAdminBtn('Email Admin', profileRow.c[5]?.v, 'mailto:', 'fa-envelope', 'bg-red-500')}
+                        </div>
+                    </div>`;
+                }
+
+                // 2. Handle Admin Notes (Independent list from Column G, all non-empty notes)
+                const notes = allRows.slice(1).map(r => r.c[6]?.v).filter(Boolean);
+                document.getElementById('adminNotesArea').innerHTML = notes.map(note => `
+                    <div class="bg-yellow-400 border-l-8 border-[#B8860B] p-5 rounded-r-2xl shadow-lg slide-up">
+                        <h4 class="font-bold text-sm text-[#37006a] uppercase flex items-center gap-2 mb-2 tracking-widest">
+                            <i class="fa fa-bullhorn animate-bounce"></i> ANNOUNCEMENT
+                        </h4>
+                        <p class="text-lg text-[#37006a] font-bold leading-relaxed break-words">${note}</p>
+                    </div>
+                `).join('');
+
             } catch (e) { document.getElementById('contactInfo').innerHTML = '<p class="text-center text-red-400">Admin Load Error</p>'; }
         }
 
@@ -210,7 +221,7 @@
             list.innerHTML = Object.keys(groups).map(cat => `
                 <div class="mb-4"><h3 class="font-bold text-[#D4AF37] text-[10px] uppercase tracking-widest mb-2 border-l-4 border-[#D4AF37] pl-2">${cat}</h3>
                 <div class="space-y-3">${groups[cat].map(i => `
-                    <div onclick="openDetail('event', ${eventsData.indexOf(i)})" class="bg-white rounded-xl shadow-sm p-3 flex gap-3 cursor-pointer"><img src="${i.images[0] || i.logo || 'CDST_Logo.png'}" class="w-20 h-20 rounded-lg object-cover bg-gray-100" onerror="this.src='CDST_Logo.png'"><div class="flex-1 flex flex-col justify-center"><h4 class="font-bold text-[#4B0082] text-sm leading-tight">${i.title}</h4><p class="text-[10px] text-gray-500 mt-1 line-clamp-2">${i.desc || ''}</p><span class="text-[9px] text-[#D4AF37] font-bold mt-2 uppercase">View Info <i class="fa fa-arrow-right ml-1"></i></span></div></div>`).join('')}</div></div>`).join('');
+                    <div onclick="openDetail('event', ${eventsData.indexOf(i)})" class="bg-white rounded-xl shadow-sm p-3 flex gap-3 cursor-pointer active:scale-95 transition-transform"><img src="${i.images[0] || i.logo || 'CDST_Logo.png'}" class="w-20 h-20 rounded-lg object-cover bg-gray-100" onerror="this.src='CDST_Logo.png'"><div class="flex-1 flex flex-col justify-center"><h4 class="font-bold text-[#4B0082] text-sm leading-tight break-words">${i.title}</h4><p class="text-[10px] text-gray-500 mt-1 line-clamp-2">${i.desc || ''}</p></div></div>`).join('')}</div></div>`).join('');
         }
 
         function renderDirectory() {
